--- a/css/inicio.css
+++ b/css/inicio.css
@@ -19,12 +19,21 @@ button.btn {
     border-radius: 20px;
     font-family: 'League Spartan', sans-serif;
     font-weight: 700;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 0 10px #8AD886;
 }
 
-a.btn {
-    background-color: #8AD886;
-    margin: 0px 10px 0px;
-    border-radius: 20px;
-    font-family: 'League Spartan', sans-serif;
-    font-weight: 700;
+button.btn:hover {
+    background-color: #6dad69;
+    transform: scale(1.05);
+}
+
+button.btn:active {
+    background-color: #6dad69 !important;
+    transform: scale(1.05);
+}
+
+header {
+    height: 500px;
+    background-image: ;
 }
