--- a/css/inicio.css
+++ b/css/inicio.css
@@ -22,7 +22,7 @@
 nav.navbar {
     display: flex;
     flex-direction: column;
-    /*box-shadow: 0px 5px 10px 0px;*/
+    box-shadow: 0px 5px 10px 0px;
 }
 
 .navbar>.container-fluid {
@@ -44,6 +44,7 @@ a.btn {
     font-family: 'League Spartan', sans-serif;
     font-weight: 700;
     transition: background-color 0.3s ease, transform 0.2s ease;
+    color: black;
 }
 
 a.btn:hover {
@@ -60,13 +61,13 @@ a.btn:active {
 .presentacion {
     padding: 8%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)), url(../images/inicio/header.jpg);
-    background-size: 100%;
+    background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     height: 100%;
     background-position: center;
     text-align: center;
-    color: white;
+    color: white !important;
     text-shadow: -4px 8px 2px black;
 }
 
@@ -75,6 +76,7 @@ a.btn:active {
     font-size: 96px;
     font-style: normal;
     font-weight: 700;
+    color: white !important;
 }
 
 .presentacion h2 {
@@ -97,4 +99,82 @@ a.btn:active {
     margin: 6%;
     justify-items: center;
     align-items: center;
+}
+
+.imagen-parte1 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.parte1 h3 {
+    font-family: 'League Gothic Regular', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #6C756A;
+    border-left: 2px solid #6C756A;
+    padding-left: 4px;
+}
+
+h1 {
+    font-family: 'Electrolize', sans-serif;
+    color: black !important;
+}
+
+.parte1 span {
+    color: #257E3D;
+}
+
+p {
+    font-family: 'Kreon', serif;
+    color: #6C756A;
+    font-size: 25px;
+}
+
+.introduccion-quienes-somos {
+    margin-right: 10%;
+    display: flex;
+    flex-direction: column;
+}
+
+.btn-sabermas {
+    align-self: center;
+    font-size: 20px !important;
+    margin: 0 !important;
+}
+
+.parte2 {
+    margin: 6%;
+    text-align: center;
+}
+
+.servicios {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.servicios div {
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px 1px;
+    margin: 3%;
+    padding: 2% 8% 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.servicios img {
+    width: 100px;
+    height: 100px;
+}
+
+.servicios h1 {
+    font-family: 'League Gothic Regular', sans-serif;
+    color: black;
+}
+
+.servicios p {
+    color: black;
 }
