--- a/css/inicio.css
+++ b/css/inicio.css
@@ -19,10 +19,18 @@
   font-style: italic;
 }
 
-nav.navbar {
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0px 5px 10px 0px;
+nav.navbar.sticky-top {
+    background-color: white;
+    transition: all 0.4s ease;
+}
+
+.navbar-scrolled {
+    border-radius: 100px;
+    box-shadow: 0 4px 15px 3px;
+    background-color: rgba(255, 255, 255, 0.3) !important;
+    backdrop-filter: blur(10px);
+    margin: 0 5%;
+    top: 10px !important;
 }
 
 .navbar>.container-fluid {
@@ -35,6 +43,31 @@ nav.navbar {
 .navbar-nav {
     font-family: 'Electrolize', sans-serif;
     gap: 30px;
+}
+
+.nav-link {
+    color: black !important;
+    transition: all 0.3s ease;
+    position: relative;
+}
+
+.nav-link:hover {
+    font-weight: 700;
+}
+
+.nav-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 5px;
+    width: 0;
+    height: 2px;
+    background-color: #8AD886;
+    transition: width 0.3s ease;
+}
+
+.nav-link:hover::after {
+    width: 100%;
 }
 
 a.btn {
@@ -360,7 +393,7 @@ footer {
     background-color: #003936;
     color: white;
     padding: 5%;
-    gap: 10%;
+    gap: 7%;
 }
 
 
