--- a/css/presupuesto.css
+++ b/css/presupuesto.css
@@ -1,5 +1,36 @@
-nav.navbar {
-    box-shadow: 0px 5px 10px 0px;
+@font-face {
+  font-family: 'League Gothic Regular';
+  src: url('/fonts/league-ghotic/LeagueGothic-Regular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'League Gothic Condensed';
+  src: url('/fonts/league-ghotic/LeagueGothic-CondensedRegular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'League Gothic Regular';
+  src: url('/fonts/league-ghotic/LeagueGothic-Italic.otf') format('opentype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+nav.navbar.sticky-top {
+    background-color: white;
+    transition: all 0.4s ease;
+}
+
+.navbar-scrolled {
+    border-radius: 100px;
+    box-shadow: 0 4px 15px 3px;
+    background-color: rgba(255, 255, 255, 0.3) !important;
+    backdrop-filter: blur(10px);
+    margin: 0 5%;
+    top: 10px !important;
 }
 
 .navbar>.container-fluid {
@@ -8,9 +39,56 @@ nav.navbar {
     justify-items: center;
 }
 
+
 .navbar-nav {
     font-family: 'Electrolize', sans-serif;
     gap: 30px;
+}
+
+.nav-link {
+    color: black !important;
+    transition: all 0.3s ease;
+    position: relative;
+}
+
+.nav-link:hover {
+    font-weight: 700;
+}
+
+.nav-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 5px;
+    width: 0;
+    height: 2px;
+    background-color: #8AD886;
+    transition: width 0.3s ease;
+}
+
+.nav-link:hover::after {
+    width: 100%;
+}
+
+a.btn {
+    background-color: #8AD886;
+    margin: 0px 10px 0px;
+    border-radius: 20px;
+    font-family: 'League Spartan', sans-serif;
+    font-weight: 700;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    color: black;
+}
+
+a.btn:hover {
+    background-color: #6dad69;
+    transform: scale(1.05);
+    box-shadow: 0 0 10px #8AD886;
+}
+
+a.btn:active {
+    background-color: #6dad69 !important;
+    transform: scale(1.05);
 }
 
 button.btn {
@@ -33,6 +111,62 @@ button.btn:active {
     transform: scale(1.05);
 }
 
-.image-sobre-nosotros {
-    width: 85%;
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: #003936;
+    color: white;
+    padding: 5%;
+    gap: 7%;
+}
+
+
+.logo-footer {
+    background-color: white;
+    padding: 5%;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    width: 90%;
+    margin-bottom: 5%;
+}
+
+.logo-footer img{
+    width: 90%;
+}
+
+.logo-footer {
+    background-color: white;
+    padding: 5%;
+    border-radius: 100%;
+}
+
+footer p, footer a {
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+    font-family: 'Kreon', serif;
+}
+
+footer h1 {
+    font-family: 'League Gothic Regular', sans-serif;
+    color: white !important;
+}
+
+.footer2 div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 5%;
+}
+
+.footer2 p {
+    margin: 0 !important;
+}
+
+.footer3 {
+    display: flex;
+    flex-direction: column;
+    gap: 5%;
 }
